[tool.poetry]
name = "dashboard-streamlit"
version = "0.1.0"
description = ""
authors = ["Jakub Urban <coobas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
pandas = ">=1.2.4,<1.3"
streamlit = "0.82.0"
plotly = "^4.14.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.2"
watchdog = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
